--- a/src/app/my-bar-chart/my-bar-chart.component.html
+++ b/src/app/my-bar-chart/my-bar-chart.component.html
@@ -1,1 +1,11 @@
-<p>my-bar-chart works!</p>
+
+
+<div>
+  <canvas baseChart
+    [datasets]="barChartData"
+          [labels]="barChartLabels"
+          [options]="barChartOptions"
+          [legend]="barChartLegend"
+          [chartType]="barChartType"
+  > </canvas>
+</div>
