--- a/src/app/my-doughnut-chart/my-doughnut-chart.component.html
+++ b/src/app/my-doughnut-chart/my-doughnut-chart.component.html
@@ -1,1 +1,8 @@
-<p>my-doughnut-chart works!</p>
+
+
+<div >
+  <canvas baseChart
+          [data]="doughnutChartData"
+          [labels]="doughnutChartLabels"
+          [chartType]="doughnutChartType"></canvas>
+</div>
