--- a/src/app/my-pie-chart/my-pie-chart.component.html
+++ b/src/app/my-pie-chart/my-pie-chart.component.html
@@ -1,1 +1,7 @@
-<p>my-pie-chart works!</p>
+
+<div>
+  <canvas baseChart
+          [data]="pieChartData"
+          [labels]="pieChartLabels"
+          [chartType]="pieChartType"></canvas>
+</div>
