--- a/src/app/my-radar-chart/my-radar-chart.component.html
+++ b/src/app/my-radar-chart/my-radar-chart.component.html
@@ -1,1 +1,6 @@
-<p>my-radar-chart works!</p>
+<div style="display: block">
+  <canvas baseChart
+          [datasets]="radarChartData"
+          [labels]="radarChartLabels"
+          [chartType]="radarChartType"></canvas>
+</div>
