--- a/src/app/my-doughnut-chart/my-doughnut-chart.component.html
+++ b/src/app/my-doughnut-chart/my-doughnut-chart.component.html
@@ -1,7 +1,7 @@
 
 
 <div >
-  <canvas baseChart
+  <canvas  id="canvas" baseChart
           [data]="doughnutChartData"
           [labels]="doughnutChartLabels"
           [chartType]="doughnutChartType"></canvas>
