--- a/src/app/my-radar-chart/my-radar-chart.component.html
+++ b/src/app/my-radar-chart/my-radar-chart.component.html
@@ -1,5 +1,5 @@
 <div style="display: block">
-  <canvas baseChart
+  <canvas id="canvas" baseChart
           [datasets]="radarChartData"
           [labels]="radarChartLabels"
           [chartType]="radarChartType"></canvas>
