--- a/src/app/my-bar-chart/my-bar-chart.component.html
+++ b/src/app/my-bar-chart/my-bar-chart.component.html
@@ -1,7 +1,7 @@
 
 
 <div>
-  <canvas baseChart
+  <canvas  id="canvas" baseChart
     [datasets]="barChartData"
           [labels]="barChartLabels"
           [options]="barChartOptions"
