--- a/src/app/my-pie-chart/my-pie-chart.component.html
+++ b/src/app/my-pie-chart/my-pie-chart.component.html
@@ -1,6 +1,6 @@
 
 <div>
-  <canvas baseChart
+  <canvas id="canvas" baseChart
           [data]="pieChartData"
           [labels]="pieChartLabels"
           [chartType]="pieChartType"></canvas>
